Prevent open c-select from hiding body overflow

--- a/swift_browser_ui_frontend/src/assets/main.css
+++ b/swift_browser_ui_frontend/src/assets/main.css
@@ -21,7 +21,8 @@ html, body {
 }
 
 body {
-  overflow-y: auto;
+  /* Prevent open c-select from hiding overflow-y */
+  overflow-y: scroll !important;
 }
 
 html,
